Assignments alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body {
       position: relative;
       margin:10px;
@@ -10,6 +9,8 @@ body {
 
 #intro {
   font-family: 'Risque', cursive;
+  /*background-color: hsl(0,0,46);
+  color: rgb(255,255,255);*/
 }
 
 .centercomp {
@@ -24,7 +25,8 @@ body {
   /*margin-left: 20%;*/
   /*margin-bottom: 20%;*/
   /*background-color: black;*/
-
+   margin-left: 60px;
+   padding-left:60px;
 }
 
  iframe {
@@ -35,8 +37,6 @@ body {
    bottom: 0;
 }
 
-
-
 #fid{
   position: relative;
   bottom:0;
@@ -46,10 +46,34 @@ body {
   color: white;
 }
 
-
 #ppic {
   width: 200;
   height: 200;
   max-width: :200;
   max-height: 200;
+}
+
+#myCarousel {
+  height: 70%;
+  max-height: 70%;
+  width: 70%;
+  background-color: hsl(0,0,46);
+}
+
+.assimg {
+    height: 70%;
+    max-height: 70%;
+    margin: 20px;
+    padding: 20px;
+
+}
+.carimg {
+   height: 600px;
+   width:80%;
+   margin-left: 60px;
+   padding-left: 60px;
+}
+.assexp {
+     height : 30%;
+     max-height: 30%;
 }
